tests/NormalTests/paczka1/fuzzy1/67480096.err
Error in line 7: zLUVYveoDa S89 73,6
Error in line 8: zLUVYveoDa A130 10,1
Error in line 12: pz1o9wZ A147 44,1
Error in line 17: JaeCs2f A147 66,8
Error in line 23: aA348JF A130 59,6
Error in line 27: S89 A130 53,7
Error in line 11: zLUVYveoDa A147 35,5
Error in line 25: JaeCs2f A666 36,5
Error in line 38: JaeCs2f A130 5,8
